fixed spacing at bottom of pages

--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@ html{
 	margin: 0;
 	padding: 0
 	height: 95%;
-	padding-bottom: 500px;
+	padding-bottom: 50px;
 }
 
 body{
   background-color: #7dd0b6;
+}
+
+footer {
+  margin-bottom: 200px;
+  overflow: hidden;
 }
 
 .navBar{
@@ -137,5 +142,5 @@ h1 {
 .aboutme{
   padding-top: 50px;
   padding-right: 50px;
-  padding-bottom: 150px;
+  padding-bottom: 75px;
 }
